[modify] update qr code

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                 <p><strong>Ngân hàng:</strong>VCB - Ngân hàng TMCP Ngoại Thương Việt Nam</p>
                 <p><strong>STK:</strong> 0011001932418</p>
                 <p><strong>Chủ TK:</strong> MAT TRAN TO QUOC VIET NAM - BAN CUU TRO TRUNG UONG</p>
-                <p><strong>Cú pháp:</strong> [Lời nhắn nhủ]</p>
+                <p><strong>Cú pháp:</strong> Ung ho dong bao[Lời nhắn nhủ]</p>
             </div>
             <p style="text-align:center;font-style:italic;color:#666">Nhận mọi mệnh giá, kể cả lời động viên (nhưng ưu
                 tiên chuyển khoản).</p>
